respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Cuotas__c.object
<CustomObject>
    <description>Cuotas de Ventas por servicio</description>
    <fields>
        <fullName>CalcMonth__c</fullName>
        <formula>TEXT(MONTH(Mes__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mes__c</fullName>
        <label>Mes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presupuesto__c</fullName>
        <label>Presupuesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AEREO</fullName>
                </value>
                <value>
                    <fullName>MARITIMO INT</fullName>
                </value>
                <value>
                    <fullName>FLETES</fullName>
                </value>
                <value>
                    <fullName>PUERTOS</fullName>
                </value>
                <value>
                    <fullName>TERRESTRE INT</fullName>
                </value>
                <value>
                    <fullName>SEGURO</fullName>
                </value>
                <value>
                    <fullName>PAQUETERIA</fullName>
                </value>
                <value>
                    <fullName>ALMACENAJE</fullName>
                </value>
                <value>
                    <fullName>CONSOLIDADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Cuotas</relationshipLabel>
        <relationshipName>Cuotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendedor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendedor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Mes__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Año</label>
        <type>Text</type>
    </fields>
    <label>Cuotas</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cuotas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>